# pydgin-parc-xcc

./: .gitignore  Makefile.in  README  aclocal.m4  configure  configure.ac
scripts/: check-summary.rb  config.sub  longcheck-setup.exp  longcheck-summary.rb  upgrade.sh  vcs-version.sh
src/: config.sub  configure  configure.ac
src/bfd/: archures.c  bfd-in2.h  cpu-mips.c  elfxx-mips.c
src/binutils/: Makefile.in  readelf.c
src/gas/: Makefile.am  Makefile.in  configure  configure.in
src/gas/config/: itbl-mips-maven.h  tc-mips-maven.c  tc-mips-maven.h
src/gas/doc/: Makefile.in
src/gcc/: Makefile.in  config.gcc  dse.c  expr.c  gthr-bthread.h  longlong.h
src/gcc/config/mips/: constraints-maven.md  loongson.md  mips-ftypes.def  mips-maven-modes.def  mips-maven-protos.h  mips-maven.c  mips-maven.h  mips-maven.md  mips-protos.h  mips.opt  predicates-maven.md  t-maven
src/gcc/cp/: Make-lang.in
src/include/elf/: mips.h
src/include/opcode/: mips-maven.h  mips.h
src/ld/: Makefile.in
src/libgcc/: config.host
src/libgloss/: configure  configure.in
src/libgloss/maven/: Makefile.in  configure  configure.ac  crt1.S  gloss.c  maven.ld  syscalls.c  syscalls.h
src/libgloss/maven/machine/: cop0.h  resource.c  setjmp.S  syscall.h  syscfg.h  time.c  timex.c
src/libgloss/mips/: configure  configure.in
src/libstdc++-v3/: configure.host
src/libstdc++-v3/config/cpu/mipsmaven/: atomic_word.h  atomicity.h
src/libstdc++-v3/testsuite/: Makefile.in
src/mpfr/: Makefile.in
src/newlib/: Makefile.in  configure.host
src/newlib/libc/include/machine/: resource.h  timex.h
src/newlib/libc/machine/: configure  configure.in
src/newlib/libc/machine/maven/: Makefile.in  configure  configure.ac  setjmp.S
src/newlib/libc/machine/maven/machine/: regdef.h  setjmp.h  time.h
src/newlib/libc/machine/mips/: setjmp.S
src/newlib/libc/machine/mipsmaven/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  getreent.c  rename.c
src/newlib/libc/stdlib/: mlock.c
src/newlib/libc/time/: clock.c
src/opcodes/: Makefile.am  Makefile.in  configure  configure.in  mips-maven-dis.c  mips-maven-opc.c  mips16-maven-opc.c
src/sim/: configure  configure.ac
src/sim/mips/: configure  configure.ac
test/: test-g++-exception.cc  test-g++-fileio.cc  test-g++-main.cc  test-g++-simple.cc  test-g++-static-alloc.cc  test-g++-static-init.cc  test-g++-stl.cc  test-g++.mk  test-gas-amo.s  test-gas-cpvpcom.s  test-gas-divrem.s  test-gas-flags.s  test-gas-gcd.s  test-gas-main.c  test-gas-regnames.s  test-gas-simple.s  test-gas-single.s  test-gas-sync.s  test-gas-vamo.s  test-gas-varith.s  test-gas-variths.s  test-gas-vcmds.s  test-gas-vconds.s  test-gas-vload.s  test-gas-vmemops.s  test-gas-vpidx.s  test-gas-vstore.s  test-gas-vutidx.s  test-gas-vvadd.s  test-gas.mk  test-gcc-args-double.c  test-gcc-args-int.c  test-gcc-args-longlong.c  test-gcc-args-single.c  test-gcc-args-struct-int.c  test-gcc-args-struct-single.c  test-gcc-args-vec.c  test-gcc-arth-double.c  test-gcc-arth-single.c  test-gcc-builtins-shared.c  (+20 more)
test/g++/: test-g++-gcd.cc  test-g++-main.cc  test-g++-simple.cc  test-g++-stl.cc  test-g++.mk
test/gas/: test-gas-gcd.s  test-gas-main.c  test-gas-simple.s  test-gas.mk
test/gcc/: test-gcc-gcd.c  test-gcc-libc.c  test-gcc-main.c  test-gcc-simple.c  test-gcc.mk
