#=========================================================================
# configure.ac for maven libgloss and crt0
#=========================================================================

#-------------------------------------------------------------------------
# Setup
#-------------------------------------------------------------------------

AC_INIT([Maven libgloss],[?],[Christopher Batten],[maven-libgloss])
AC_CONFIG_SRCDIR([crt1.S])
AC_CONFIG_AUX_DIR([${srcdir}/../..])

#-------------------------------------------------------------------------
# Checks for programs
#-------------------------------------------------------------------------

LIB_AC_PROG_CC
AC_CHECK_TOOL([AR],[ar])
AC_CHECK_TOOL([RANLIB],[ranlib])
AC_PROG_INSTALL

#-------------------------------------------------------------------------
# Output
#-------------------------------------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
